      -- save/restore error handlers
      -- Replace X::LibXML::Reader::OpFail with X::LibXML::OpFail. Fix usage
         in schema and relax-ng.
    - [LibXML::{Pattern|Dtd|Schema|RelaxNg|RegExp}]
      Added ACCEPTS() multi methods for more Rakuish matching, e.g.:
          $node ~~ $pattern; $doc ~~ $dtd; "abc" ~~ $regexp
0.2.3 2019-12-05
    - [dom.c][LibXML::Node] take out case conversion from domXPathGetKey()
      .xpath-key() to case handling semantics. tags are converted to
      lowercase on :html parse., but reatain case when from the API.
      XPath searches then need to match the case (see 12html.t).
    - [LibXML::_Options] fix compilation on Rakudo 2018.07
0.2.2 2019-11-29
    - [domXPath] fixed reference counting in domPushNodeSet() #29
    - [LibXML::ErrorHandling][LibXML::SAX::Builder]
      -- Changed the SAX `serror($err)` callback argument from an native `xmlError`
         structure to a `X::LibXML` exception object.
      -- Fixed SAX Handler dispatch of Raku callback raised exceptions #31
   - Rename classes LibXML::AttrDecl -> LibXML::Dtd::Attr, LibXML::ElementDecl
     -> LibXML::Dtd::Element; work in progress on #30
0.2.1 2019-11-27
    - [dom.c] Split-off domASTKey() and domXPathKey() functions from domNodeName().
    - [LibXML::Node]
      -- revert .nodeName(), 0.1.9 changes; restore to DOM compliant names:
         #cdata => #data-section, #fragment' => #document-fragment,
         #xml|#html|#docb => #document
      -- instead, introduce new method .ast-key() which returns short-forms:
         (#cdata, #fragment, #xml, #html, #doc) for AST construction.
      -- from-ast() now accepts all of the above (i.e.. #cdata, or #cdata-section;
         #document or #xml, #fragment, or #document-fragment)
0.2.0 2019-11-26
    - [LibXML::Native][LibXML::Config] really disable network access this time.
      Started, but not completed properly in release 0.1.0.
    - [LibXML::Schema] Disable network loading of `xsd:import` statements by